--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         .tooltip:hover::before, .tooltip:hover::after {
             visibility: visible;
             opacity: 1;
-            transform: translateX(-50%) translateY(0); /* Sube para a posição final */
+            transform: translateX(-50%) translateY(0); /* Sobe para a posição final */
         }
         /* Estilo da caixa de texto do tooltip */
         .tooltip::before {
@@ -780,7 +780,61 @@
             </div>
         </div>
         <!-- ========================================================== -->
+
+        <!-- Botões de Ação Principais (Mantidos aqui para referência do JS, mas serão movidos para o Dashboard) -->
+        <div class="mb-8 p-4 bg-indigo-50 border border-indigo-200 rounded-lg hidden">
+            <h3 class="font-bold text-lg text-indigo-800 mb-3">Passo 1: Gerar o Roteiro Principal</h3>
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
+                <button id="generateIntroBtn" class="btn btn-primary">
+                    <span class="button-text">Introdução</span>
+                    <div class="loading-spinner hidden" id="introSpinner"></div>
+                </button>
+                <button id="generateDevelopmentBtn" class="btn btn-primary">
+                    <span class="button-text">Desenvolvimento</span>
+                    <div class="loading-spinner hidden" id="developmentSpinner"></div>
+                </button>
+                <button id="climaxBtn" class="btn btn-primary">
+                    <span class="button-text">Clímax</span>
+                    <div class="loading-spinner hidden" id="climaxSpinner"></div>
+                </button>
+                <button id="conclusionBtn" class="btn btn-primary">
+                    <span class="button-text">Conclusão</span>
+                    <div class="loading-spinner hidden" id="conclusionSpinner"></div>
+                </button>
+                <button id="generateCTABtn" class="btn btn-primary">
+                    <span class="button-text">CTA</span>
+                    <div class="loading-spinner hidden" id="ctaSpinner"></div>
+                </button>
+            </div>
+        </div>
+
+        <!-- Botões de Material de Suporte (Mantidos aqui para referência do JS, mas serão movidos para o Dashboard) -->
+        <div class="mb-8 p-4 bg-gray-50 border border-gray-200 rounded-lg hidden">
+            <h3 class="font-bold text-lg text-gray-800 mb-3">Passo 2: Criar Material de Suporte</h3>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                <button id="generateDescriptionBtn" class="btn btn-secondary">
+                    <span class="button-text">Descrição do Vídeo</span>
+                    <div class="loading-spinner hidden" id="descriptionSpinner"></div>
+                </button>
+                <button id="generateTitlesAndThumbnailsBtn" class="btn btn-secondary">
+                    <span class="button-text">Títulos de Vídeos e Thumbnails</span>
+                    <div class="loading-spinner hidden" id="titlesThumbnailsSpinner"></div>
+                </button>
+            </div>
+        </div>
        
+        <!-- Botões de Salvar e Exportar (Mantidos aqui para referência do JS, mas serão movidos para o Dashboard) -->
+        <div class="mb-8 p-4 bg-gray-50 border border-gray-200 rounded-lg hidden">
+            <h3 class="font-bold text-lg text-gray-800 mb-3">Passo 3: Salvar e Exportar</h3>
+             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                <button id="exportProjectBtn" class="btn btn-secondary">Exportar Projeto</button>
+                <button id="importProjectBtn" class="btn btn-secondary">Importar Projeto</button>
+                <input type="file" id="importFileInput" class="hidden" accept=".json">
+                <button id="downloadPdfBtn" class="btn btn-secondary">PDF</button>
+                <button id="resetScriptBtn" class="btn btn-secondary">Novo</button>
+            </div>
+        </div>
+
         <!-- ========================================================== -->
         <!-- ===== NOVA ÁREA DE SAÍDA: O PAINEL DO PROJETO ======== -->
         <!-- ========================================================== -->
