--- a/index.html
+++ b/index.html
@@ -570,6 +570,33 @@
             border-color: #4b5563;
             color: #6b7280;
         }
+
+        /* ========================================================== */
+        /* Estilos para a coluna de roteiro com controles fixos */
+        /* ========================================================== */
+        #scriptColumn {
+            /* Define uma altura máxima para a coluna, para que a rolagem interna funcione */
+            /* 'vh' é a altura da viewport (tela visível) */
+            max-height: 90vh; 
+        }
+        #scriptSectionsContainer {
+            /* Permite que este contêiner de acordeões ocupe todo o espaço disponível e role */
+            flex-grow: 1;
+            overflow-y: auto;
+        }
+        #scriptGenerationControls {
+            /* Garante que os controles fiquem "colados" na parte inferior da coluna */
+            position: sticky;
+            bottom: 0;
+            /* Fundo com transparência para um efeito mais elegante ao rolar */
+            background-color: rgba(238, 242, 255, 0.95); /* Indigo-50 com transparência */
+            backdrop-filter: blur(4px);
+            -webkit-backdrop-filter: blur(4px);
+            z-index: 10; /* Garante que fique acima do conteúdo que rola */
+        }
+        .dark #scriptGenerationControls {
+            background-color: rgba(31, 41, 55, 0.95); /* Gray-800 com transparência */
+        }
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900">
@@ -763,10 +790,11 @@
             <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
                 
                 <!-- Coluna Principal: Roteiro -->
-                <div id="scriptColumn" class="lg:col-span-7 space-y-4">
+                <div id="scriptColumn" class="lg:col-span-7 flex flex-col gap-4">
                     <h2 class="text-2xl font-bold text-gray-800 dark:text-gray-200 border-b-2 border-indigo-200 dark:border-indigo-800 pb-2">Roteiro Principal</h2>
-                    <!-- Cartão do Esboço Estratégico -->
-                    <div id="strategicOutlineCard" class="p-4 bg-white dark:bg-gray-800 rounded-lg shadow-md mb-6">
+
+                    <!-- Cartão do Esboço Estratégico (permanece no topo) -->
+                    <div id="strategicOutlineCard" class="p-4 bg-white dark:bg-gray-800 rounded-lg shadow-md">
                         <div class="flex justify-between items-center mb-3">
                             <h3 class="font-bold text-lg text-gray-800 dark:text-gray-200">Esboço Estratégico</h3>
                             <button id="generateOutlineBtn" class="btn btn-secondary btn-small">Criar Esboço</button>
@@ -775,16 +803,20 @@
                              <div class="asset-card-placeholder text-sm">Clique em 'Criar Esboço' para a IA planejar a estrutura do roteiro.</div>
                         </div>
                     </div>
-                    <!-- Os acordeões do roteiro serão inseridos aqui pelo JS -->
-                    <div id="introSection" class="script-section"></div>
-                    <div id="developmentSection" class="script-section"></div>
-                    <div id="climaxSection" class="script-section"></div>
-                    <div id="conclusionSection" class="script-section"></div>
-                    <div id="ctaSection" class="script-section"></div>
-                     <!-- Botões de Geração do Roteiro -->
-                    <div class="p-4 bg-indigo-50 dark:bg-gray-800 border border-indigo-200 dark:border-gray-700 rounded-lg">
-                        <h3 class="font-bold text-lg text-indigo-800 dark:text-indigo-300 mb-3">Gerar Seções do Roteiro</h3>
-                        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-3 gap-3">
+
+                    <!-- Novo Contêiner para os Acordeões que vai rolar -->
+                    <div id="scriptSectionsContainer" class="flex-grow space-y-4 overflow-y-auto">
+                        <div id="introSection" class="script-section"></div>
+                        <div id="developmentSection" class="script-section"></div>
+                        <div id="climaxSection" class="script-section"></div>
+                        <div id="conclusionSection" class="script-section"></div>
+                        <div id="ctaSection" class="script-section"></div>
+                    </div>
+                    
+                    <!-- Controles de Geração, agora fixos no final da coluna -->
+                    <div id="scriptGenerationControls" class="p-4 bg-indigo-50 dark:bg-gray-800 border-t-2 border-indigo-200 dark:border-gray-700 rounded-b-lg sticky bottom-0">
+                        <h3 class="font-bold text-lg text-indigo-800 dark:text-indigo-300 mb-3 text-center">Gerar Seções do Roteiro</h3>
+                        <div class="grid grid-cols-2 sm:grid-cols-3 gap-3">
                             <button id="generateIntroBtn" class="btn btn-primary btn-small" disabled>Introdução</button>
                             <button id="generateDevelopmentBtn" class="btn btn-primary btn-small" disabled>Desenvolvimento</button>
                             <button id="climaxBtn" class="btn btn-primary btn-small" disabled>Clímax</button>
@@ -1313,12 +1345,9 @@
             let prompt = `${baseContext}\n\nGenerate the **${sectionTitle}** section of the video script. Focus on making it highly engaging and suitable for a viral video. Ensure the tone and content align with the channel and audience.`;
             let maxTokens = 2000;
 
-            // =======================================================
-            // === BLOCO DE CÓDIGO PARA ADICIONAR ====================
             if (outlineDirective) {
                 prompt += `\n\n**IMPORTANT STRATEGIC GUIDELINE:** For this specific section, you MUST follow this strategic plan: "${outlineDirective}"`;
             }
-            // =======================================================
 
             prompt += `\n\nIMPORTANT: Do NOT include any scene descriptions, visual/audio cues (e.g., [SHOT], (Camera pan), (Music swells)), or speaker labels (e.g., "Narrator:", "Host:") in the generated script content. Provide only the spoken text.`;
             prompt += `\n\nABSOLUTELY NO META-COMMENTS. Do not add any explanatory text about the script itself. Your entire response must be ONLY the text to be spoken in the video, and nothing else.`;
