--- a/index.html
+++ b/index.html
@@ -35,16 +35,23 @@
 
         body {
             font-family: 'Carlito', sans-serif;
-            background-color: #f0f2f5;
-            color: var(--text-dark); /* Cor do texto padrão */
+            background-color: #f0f2f5 !important; /* Fundo padrão para modo claro */
+            color: var(--text-dark) !important;
+        }
+        .dark body {
+            background-color: #111827 !important; /* Fundo para modo escuro */
+            color: #d1d5db !important; /* Cor de texto para modo escuro */
         }
         .container {
             max-width: 1024px;
             margin: 2rem auto;
             padding: 2rem;
-            background-color: #ffffff;
+            background-color: #ffffff !important;
             border-radius: 12px;
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
+        }
+        .dark .container {
+            background-color: #1f2937 !important; /* gray-800 */
         }
         .input-group label {
             font-weight: 600;
@@ -666,7 +673,7 @@
     <div class="container relative">
         <div class="absolute top-4 right-4 flex items-center gap-2 z-[1001]">
             <button id="toggleZenModeBtn" class="p-2 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500 dark:text-gray-400" title="Modo Foco">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16"><path d="M1.5 1a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0v-4A1.5 1.5 0 0 1 1.5 0h4a.5.5 0 0 1 0 1h-4zM10 .5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 16 1.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5zM.5 10a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 0 14.5v-4a.5.5 0 0 1 .5-.5zm15 0a.5.5 0 0 1 .5.5v4a1.5 1.5 0 0 1-1.5 1.5h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16"><path d="M1.5 1a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0v-4A1.5 1.5 0 0 1 1.5 0h4a.5.5 0 0 1 0 1h-4zM10 .5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 16 1.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5zM.5 10a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 0 14.5v-4a.5.5 0 0 1 .5-.5zm15 0a.5.5 0 0 1 .5.5v4a1.5 1.5 0 0 1-1.5 1.5h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5z"/><path d="M3 14.5a1.5 1.5 0 0 1-1.5-1.5V3a1.5 1.5 0 0 1 1.5-1.5h10A1.5 1.5 0 0 1 14.5 3v10a1.5 1.5 0 0 1-1.5 1.5H3zM4 3v10h8V3H4z"/></svg>
             </button>
             <button id="darkModeToggle" class="p-2 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500 dark:text-gray-400" title="Modo Escuro">
                 <svg id="moonIcon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
@@ -1500,13 +1507,13 @@ Exemplo de formato JSON esperado:
                     break;
                 case 'titles_thumbnails':
                     prompt = `${baseContext}
-Generate 5 highly clickable and viral YouTube video titles and 3 compelling thumbnail ideas.
+Generate 5 highly clickable and viral YouTube video titles and 5 compelling thumbnail ideas.
 
 IMPORTANT: Respond ONLY with a valid JSON object. Do not include any other text, preambles, or explanations outside of the JSON structure itself.
 
 The JSON object must have two top-level keys:
 1.  "titles": An array of strings.
-2.  "thumbnails": An array of objects, where each object has a "title" (string) and a "description" (string) key.
+2.  "thumbnails": An array of objects, where each object has a "title" (string) and a "description" (string) key. Each description should focus on strong visual elements, emotions, and clear text overlays.
 
 The final output MUST be only the JSON code, like this example:
 {
@@ -1907,6 +1914,10 @@ ${scriptContent}
                             <div>
                                 <h4 class="font-bold text-base mb-2">Ideias de Thumbnail:</h4>
                                 <div class="p-3 bg-gray-50 dark:bg-gray-700/50 rounded-md space-y-3">${thumbnailsListHtml}</div>
+                                <div class="mt-3">
+                                    <button class="btn btn-secondary btn-small" onclick="window.analyzeThumbnails()">Analisar Thumbnails</button>
+                                    <div id="thumbnailAnalysisResult" class="mt-3"></div>
+                                </div>
                             </div>
                         </div>
                     `;
@@ -1964,6 +1975,52 @@ ${scriptContent}
 
             } catch (error) {
                 resultContainer.innerHTML = `<p class="text-red-500 text-sm">Falha ao analisar os títulos: ${error.message}</p>`;
+            }
+        };
+
+        /**
+         * Analisa o potencial de clique (CTR) das ideias de thumbnail geradas.
+         */
+        window.analyzeThumbnails = async () => {
+            if (!generatedTitlesAndThumbnails || !generatedTitlesAndThumbnails.thumbnails || generatedTitlesAndThumbnails.thumbnails.length === 0) {
+                window.showToast("Gere as ideias de thumbnail primeiro!");
+                return;
+            }
+
+            const resultContainer = document.getElementById('thumbnailAnalysisResult');
+            resultContainer.innerHTML = `<div class="loading-spinner-small"></div>`;
+
+            const thumbnailsString = generatedTitlesAndThumbnails.thumbnails.map(t => `Título: ${t.title}, Descrição: ${t.description}`).join('\n---\n');
+            
+            const prompt = `Você é um Diretor de Arte e especialista em YouTube. Analise a seguinte lista de ideias para thumbnails. Para cada uma, forneça uma "nota de potencial visual" de 0 a 10 (onde 10 é uma imagem irresistível) e uma sugestão curta para maximizar o impacto visual, focando em contraste, emoção facial, clareza e curiosidade.
+
+            Responda APENAS com um array JSON. Cada objeto no array deve ter as chaves "ideia_original", "nota_visual" e "sugestao_melhora".
+
+            Ideias para analisar:
+            ---
+            ${thumbnailsString}
+            ---`;
+
+            try {
+                const rawResult = await callGroqAPI(prompt, 2500);
+                const cleanedResult = cleanGeneratedText(rawResult, true);
+                const analysis = JSON.parse(cleanedResult);
+
+                let analysisHtml = '<div class="space-y-4">';
+                analysis.forEach(item => {
+                    analysisHtml += `
+                        <div class="p-3 border border-gray-200 dark:border-gray-700 rounded-md bg-white dark:bg-gray-800 shadow-sm">
+                            <p class="font-semibold text-gray-800 dark:text-gray-200">${item.ideia_original}</p>
+                            <p class="text-sm mt-1 text-gray-600 dark:text-gray-400"><strong>Nota de Potencial Visual:</strong> <span class="text-indigo-500 font-bold">${item.nota_visual} / 10</span></p>
+                            <p class="text-sm mt-1 text-gray-600 dark:text-gray-400"><strong>Sugestão:</strong> ${item.sugestao_melhora}</p>
+                        </div>
+                    `;
+                });
+                analysisHtml += '</div>';
+                resultContainer.innerHTML = analysisHtml;
+
+            } catch (error) {
+                resultContainer.innerHTML = `<p class="text-red-500 text-sm">Falha ao analisar as thumbnails: ${error.message}</p>`;
             }
         };
 
